sources = files(
    'Main.vala',
    'Application.vala',
    'Widgets/Window.vala',
    'Widgets/WelcomeView.vala',
    'Widgets/TrimView.vala',
    'Widgets/VideoPlayer.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/TimeStampEntry.vala',
    'Widgets/Timeline.vala',
    'Widgets/MessageArea.vala',
    'Controllers/TrimController.vala',
    'Utils/Utils.vala'
)
