sources = files(
    'Main.vala',
    'Application.vala',
    'Widgets/Window.vala',
    'Widgets/WelcomeView.vala',
    'Widgets/TrimView.vala',
    'Widgets/VideoPlayer.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/TimeStampEntry.vala',
    'Widgets/Timeline.vala',
    'Widgets/MessageArea.vala',
    'Widgets/ProgressDialog.vala',
    'Controllers/TrimController.vala',
    'Utils/Utils.vala'
)
